--- a/public/authorize.html
+++ b/public/authorize.html
@@ -5,11 +5,12 @@
     <meta name="author" content="Kodinger">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>IAM Login</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style>
         body {
             position: absolute;
-            top:50%;
+            top: 50%;
             transform: translate(-50%, -50%);
             left: 50%;
         }
@@ -24,10 +25,11 @@
                 <div class="card fat">
                     <div class="card-body">
                         <h4 class="card-title">Login</h4>
-                        <form method="POST" class="my-login-validation" novalidate="">
+                        <form onsubmit="submitForm()">
                             <div class="form-group">
                                 <label for="email">E-Mail Address</label>
-                                <input id="email" type="email" class="form-control" name="email" value="" required autofocus>
+                                <input id="email" type="email" class="form-control" name="email" value="" required
+                                       autofocus>
                                 <div class="invalid-feedback">
                                     Email is invalid
                                 </div>
@@ -36,14 +38,14 @@
                             <div class="form-group">
                                 <label for="password">Password
                                 </label>
-                                <input id="password" type="password" class="form-control" name="password" required data-eye>
+                                <input id="password" type="password" class="form-control" name="password" required>
                                 <div class="invalid-feedback">
                                     Password is required
                                 </div>
                             </div>
 
                             <div class="form-group m-0">
-                                <button type="submit" class="btn btn-primary btn-block">
+                                <button type="button" class="btn btn-primary btn-block" onclick="submitForm()">
                                     Login
                                 </button>
                             </div>
@@ -54,5 +56,37 @@
         </div>
     </div>
 </section>
+<script>
+    function submitForm() {
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
+        const clientId = new URL(window.location.href).searchParams.get('client_id');
+        const redirectUri = new URL(window.location.href).searchParams.get('redirect_uri');
+        const responseType = new URL(window.location.href).searchParams.get('response_type');
+        const scopes = new URL(window.location.href).searchParams.get('scopes');
+        const state = new URL(window.location.href).searchParams.get('state');
+        const data = {
+            email,
+            password,
+            clientId,
+            redirectUri,
+            responseType,
+            scopes,
+            state
+        }
+        fetch('/oauth/authorize', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json; charset=utf-8'
+            },
+            body: JSON.stringify(data)
+        }).then(res => res.json())
+            .then(res => {
+                window.location.href = res.redirect_url;
+            })
+            .catch(err => console.log(err));
+
+    }
+</script>
 </body>
 </html>
